--- a/app/views/shared/_widget_profile_settings.html.haml
+++ b/app/views/shared/_widget_profile_settings.html.haml
@@ -1,5 +1,5 @@
 - links = [{path: profile_path, string: t('users.edit profile')},
-           {path: update_email_path, string: t('users.update email button')},
+           {path: update_email_path, string: t('users.edit email')},
            {path: password_path, string: t('users.edit password')},
            {path: picture_path, string: t('users.edit picture')},
            {path: notifications_path, string: t('users.edit notifications')},
@@ -8,7 +8,7 @@
 .widget
   %header
     %span.header_icon_gear
-      Settings
+      = t('users.settings')
   %ul.widget_menu
     - links.each do |l|
       %li
