--- a/app/views/users/update_email.html.haml
+++ b/app/views/users/update_email.html.haml
@@ -8,4 +8,4 @@
 = form_for @user, url: update_email_path do |u|
   %p
     = u.text_field :email
-    = u.submit t('users.update email button')
+    = u.submit t('users.edit email')
