fixing 'support' key name with rails-i18n

--- a/app/views/shared/_footer.html.haml
+++ b/app/views/shared/_footer.html.haml
@@ -20,7 +20,7 @@
     %a{:href => press_path}=t("press")
     %span.separator
       |
-    %a{:href => 'http://support.youversion.com'}=t("support")
+    %a{:href => 'http://support.youversion.com'}=t("get support")
     - unless [:es, :pt, :pt_PT, :pt_BR].include? I18n.locale
       %span.separator
         |
