--- a/app/views/plans/index.html.haml
+++ b/app/views/plans/index.html.haml
@@ -30,12 +30,12 @@
           %input{:type => "hidden", :name => "query", :value => params[:query]}
         %select.float_left{onChange: "this.form.submit()", style: "margin-right: 126px; margin-left:10px", name: "lang", }
           - I18n.available_locales.each do |loc|
-            %option{value: loc.to_s, selected: loc.to_s == params[:lang]}= t("language name", locale: loc)
+            %option{value: loc.to_s, selected: loc.to_s == @plan_lang}= t("language name", locale: loc)
       %form{method: 'get'}
         - if params[:category]
           %input{:type => "hidden", :name => "category", :value => params[:category]}
-        - if params[:lang]
-          %input{:type => "hidden", :name => "lang", :value => params[:lang]}
+        - if @plan_lang
+          %input{:type => "hidden", :name => "lang", :value => @plan_lang}
         %input.autofocus{:style =>"width: 300px; margin-left: 40px;", name: "query", :type => 'search', :placeholder => t("plans.search placeholder", category: @categories.current_name || t("plans.all")), value: params[:query]}
         %input{:type => 'submit', :value => t("plans.search")}
       %hr{:style => "margin-top:15px"}
@@ -44,18 +44,18 @@
         %dt
           = t("plans.browse by category")
         %dd{class: (params[:category] == "" || params[:category].nil?) ? "highlighted" : ""}
-          = link_to t("plans.all plans"), plans_path(lang: params[:lang])
+          = link_to t("plans.all plans"), plans_path(lang: @plan_lang)
         - level = 0
         - if @categories
           - @categories.breadcrumbs.each do |category|
             - level += 1
             %dd{class: params[:category] == category.slug ? "highlighted" : ""}
-              %a{:href => plans_path(category: category.slug, lang: params[:lang]), :style => "margin-left:#{level * 20}px"}
+              %a{:href => plans_path(category: category.slug, lang: @plan_lang), :style => "margin-left:#{level * 20}px"}
                 = (params[:category] == category.slug) ? t("plans.all category plans", category: category.name)  : category.name
           - level += 1
           - @categories.items.each do |category|
             %dd{class: params[:category] == category.slug ? "highlighted" : ""}
-              %a{:href => plans_path(category: category.slug, lang: params[:lang]), :style => "margin-left:#{level * 20}px"}
+              %a{:href => plans_path(category: category.slug, lang: @plan_lang), :style => "margin-left:#{level * 20}px"}
                 = category.name
     .split_pane_content
       - if !@plans.empty?
