--- a/app/views/plans/index.html.haml
+++ b/app/views/plans/index.html.haml
@@ -59,6 +59,7 @@
                 = category.name
     .split_pane_content
       - if !@plans.empty?
+        - if params[:no_loc]
         %ul.big_list
           - @plans.each do |plan|
             %li
