--- a/app/views/plans/_pane_devotional.html.haml
+++ b/app/views/plans/_pane_devotional.html.haml
@@ -6,7 +6,7 @@
         %div{style: "text-align: center; width: 165px; margin: 0 auto; padding-right: 10px"}
           %h4{style: "margin-bottom: 0px; margin-top: -4px;"}= (@subscription.respond_to?(:reading_date) ? @subscription.reading_date(@day) : current_date + (@day - 1)).strftime('%a %b %-d')
           .mute{style: "font-weight: normal"}=t("plans.which day in plan", day: @day.to_s, total: @subscription.total_days)
-    - if @reading.references
+    - if !@reading.references.empty?
       - @reading.references.each_with_index do |r,i|
         %dd.split_devotional_pane{class: @content_page == i ? "highlighted" : ""}
           = render partial: 'plan_ref_check_and_title', locals: {reference: r, plan: @subscription, index: i, cur_reading_index: @content_page, day: @day}
@@ -17,6 +17,8 @@
             -if r.ref.contents(format: 'html').count > 6
               %div{style: "margin-right: 30px; min-height: 45px"}
                 = render partial: 'reading_completed_button', locals: {plan: @subscription, cur_reading_index: @content_page, reading: @reading, day: @day}
+    -else 
+      = t('plans.no content')
     = render partial: 'plan_links', locals: {plan: @subscription}
 .split_pane_content{style: "width: 423px"}
   %div{style: "margin-left: 25px; margin-right: 5px;"}= @reading.devotional.html_safe
