loading community notes i18n and donate pt_BR to pt-BR fix.

--- a/app/cells/notes_list_widget/stub.html.haml
+++ b/app/cells/notes_list_widget/stub.html.haml
@@ -8,5 +8,5 @@
         %tr
           %th
           %td
-            %p= "Loading community notes..."    
+            %p= t('notes.loading community')
 
