Added delete feature

--- a/app/views/shared/_widget_profile_settings.html.haml
+++ b/app/views/shared/_widget_profile_settings.html.haml
@@ -5,6 +5,7 @@
            {path: notifications_path, string: t('users.edit notifications')},
            {path: connections_path, string: t('users.edit connections')},
            {path: devices_path, string: t('users.edit devices')}]
+		   {path: delete_path, string: t('users.delete account')}]
 .widget
   %header
     %span.header_icon_gear
