initial working version of account delete

--- a/app/views/shared/_widget_profile_settings.html.haml
+++ b/app/views/shared/_widget_profile_settings.html.haml
@@ -4,8 +4,8 @@
            {path: picture_path, string: t('users.edit picture')},
            {path: notifications_path, string: t('users.edit notifications')},
            {path: connections_path, string: t('users.edit connections')},
-           {path: devices_path, string: t('users.edit devices')}]
-		   {path: delete_path, string: t('users.delete account')}]
+           {path: devices_path, string: t('users.edit devices')},
+           {path: delete_account_path, string: t('users.edit account_existence')}]
 .widget
   %header
     %span.header_icon_gear
