--- a/app/assets/stylesheets/donate.sass
+++ b/app/assets/stylesheets/donate.sass
@@ -24,12 +24,13 @@
     repeat: no-repeat
   overflow: hidden
   padding-bottom: 0
-  height: 480px
+  height: 550px
 
 #main article h1
   font:
     size: 42px
   line-height: 1.3
+  width: 550px
 
 #main article p
   font-size: 13px
