--- a/app/views/shared/_header.html.haml
+++ b/app/views/shared/_header.html.haml
@@ -1,5 +1,5 @@
 %header#header{:role => 'banner'}
-  %a#yv_logo{:href => '/'}
+  %a#yv_logo{:href => '/', style: @site.logo_style }
     =t("youversion")
   %nav
     %ul
