copy and design updates to account delete

--- a/app/views/users/delete_account.html.haml
+++ b/app/views/users/delete_account.html.haml
@@ -1,6 +1,6 @@
 - @title = "#{t('users.edit account_existence')} | #{@user.name || @user.username}"
 
-%p DON'T DO IT!!
+%p= t('users.delete account description')
 
 = form_tag delete_account_path do
   - if @user.errors.any?
@@ -14,6 +14,6 @@
     %br
     = password_field_tag :password, params[:password], class: "autofocus"
     %br
-    = link_to t('users.forgot password'), forgot_password_path
+    %span.small= link_to t('users.forgot password'), forgot_password_path
   %p
     = submit_tag t("users.delete account button"), class: "confirm", "data-confirm-text" => t('users.yes delete')
