Tweaked some styles on the donate page

--- a/app/views/donations/us.html.haml
+++ b/app/views/donations/us.html.haml
@@ -2,7 +2,7 @@
   %h1= t('make a donation')
   %p= t('donate.header copy')
   = form_tag do
-    %p{style: "background: #EEEDEB; padding: 23px; border: 1px solid #CBC9CF; border-radius: 4px;"}
+    %p{style: "background: #EEEDEB; padding: 5px 23px 10px; border: 1px solid #CBC9CF; border-radius: 4px;"}
       = label_tag 'tr[x_amount]', t('donate.amount')
       %br
       %span{style: "font-size:24px; display: inline-block; margin-right: -1em; top: 7px; left: 4px; position: relative; z-index: 2"} $
