--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -29,8 +29,8 @@
       = render '/shared/footer'
     - if @reader_menus == true
       = render_cell :book_selector, :display, {version: @version}
-      = render_cell :version_selector, :display, {version: @version, recent_versions: recent_versions, reference: @reference}
-      = render_cell :version_selector, :display, {version: @alt_version, recent_versions: recent_versions, reference: @reference, is_alt: true}
+      = render_cell :version_selector, :display, {version: @version, recent_versions: recent_versions, reference: @reference, site: @site}
+      = render_cell :version_selector, :display, {version: @alt_version, recent_versions: recent_versions, reference: @reference, site: @site, is_alt: true}
       = render '/shared/menu_bookmark' unless @share_menu == false
       = render '/shared/menu_settings'
       = render '/shared/menu_audio_player'
