--- a/app/views/donations/us.html.haml
+++ b/app/views/donations/us.html.haml
@@ -8,33 +8,35 @@
       %span{style: "font-size:24px; display: inline-block; margin-right: -1em; top: 7px; left: 4px; position: relative; z-index: 2"} $
       = text_field_tag 'tr[x_amount]', nil, type: "tel", style: "font-size:24px; padding-left: 24px; margin-top: 5px; width: 7em", tabindex: 6
     %div{style: "padding-left: 17px;"}
-      %p
+      .float_left{style: "margin-right: 15px; margin-bottom: 15px"}
         = label_tag 'tr[x_name]', t('donate.name')
         %br
-        = text_field_tag 'tr[x_name]', nil, tabindex: 12
-      %p
+        = text_field_tag 'tr[x_name]', nil, {tabindex: 12, style:"width: 225px"}
+      .float_left
         = label_tag 'tr[x_email]', t('users.email address')
         %br
-        = text_field_tag 'tr[x_email]', nil, tabindex: 24
-      %p
+        = text_field_tag 'tr[x_email]', nil, {tabindex: 24, style:"width: 225px"}
+      %p{style: "clear: left"}
         = label_tag 'tr[x_address]', t('donate.address')
         %br
-        = text_field_tag 'tr[x_address]', nil, tabindex: 36
+        = text_field_tag 'tr[x_address]', nil, {tabindex: 36, style: "width: 465px"}
       %p
-        = label_tag 'tr[x_city]', t('donate.city')
-        %br
-        = text_field_tag 'tr[x_city]', nil, tabindex: 48
+        .float_left{style: "margin-right: 15px"}
+          = label_tag 'tr[x_city]', t('donate.city')
+          %br
+          = text_field_tag 'tr[x_city]', nil, tabindex: 48
+        .float_left{style: "margin-right: 15px"}
+          = label_tag 'tr[x_state]', t('donate.state')
+          %br
+          = select 'tr', 'x_state', {''=>''}.merge(Cfg.usstates).map { |k, v| [v, k] }, {}, {:tabindex => 60, style: "width: 172px"}
+        .float_left
+          = label_tag 'tr[x_zip]', t('donate.zip')
+          %br
+          = text_field_tag 'tr[x_zip]', nil, {tabindex: 72, style: "width: 100px"}
       %p
-        = label_tag 'tr[x_state]', t('donate.state')
-        %br
-        = select 'tr', 'x_state', {''=>''}.merge(Cfg.usstates).map { |k, v| [v, k] }, {}, {:tabindex => 60, style: "width: 165px"}
-      %p
-        = label_tag 'tr[x_zip]', t('donate.zip')
-        %br
-        = text_field_tag 'tr[x_zip]', nil, tabindex: 72
-      %div{style: "position: relative; left: -6px"}
-        = check_box_tag 'tr[x_email_customer]', "yes", true, tabindex: 84
-        = label_tag 'tr[x_email_customer]', t('donate.receipt')
-      %div{style: "padding-top: 2em; padding-bottom: 2em"}
+        %div{style: "position: relative; top: 15px; left: -6px; clear:left"}
+          = check_box_tag 'tr[x_email_customer]', "yes", true, tabindex: 84
+          = label_tag 'tr[x_email_customer]', t('donate.receipt')
+      %div.float_right{style: "padding-top: 1em; padding-bottom: 2em"}
         %button{class: "action_button_green", tabindex: 96, action: "submit"}
           = t('donate.preview')
