Added address class to the address field in the donation form. Moved inline styles to proper css file

--- a/app/assets/stylesheets/_form_elements.sass
+++ b/app/assets/stylesheets/_form_elements.sass
@@ -254,7 +254,14 @@ input[type="week"]
   padding: 7px 0 7px 10px 
   height: 35px
 
+form p.emphasis
+  background: #EEEDEB
+  padding: 5px 23px 10px
+  border: 1px solid #CBC9CF
+  border-radius: 4px
 
+input.address
+	width: 465px
 
 div.color_picker_list button.color
   display: inline
