--- a/app/views/donations/us.html.haml
+++ b/app/views/donations/us.html.haml
@@ -2,7 +2,7 @@
   %h1= t('make a donation')
   %p= t('donate.header copy')
   = form_tag do
-    %p{style: "background: #EEEDEB; padding: 5px 23px 10px; border: 1px solid #CBC9CF; border-radius: 4px;"}
+    %p{class="emphasis"}
       = label_tag 'tr[x_amount]', t('donate.amount')
       %br
       %span{style: "font-size:24px; display: inline-block; margin-right: -1em; top: 7px; left: 4px; position: relative; z-index: 2"} $
@@ -19,7 +19,7 @@
       %p{style: "clear: left"}
         = label_tag 'tr[x_address]', t('donate.address')
         %br
-        = text_field_tag 'tr[x_address]', nil, {tabindex: 36, style: "width: 465px"}
+        = text_field_tag 'tr[x_address]', nil, {tabindex: 36, class: "address"}
       %p
         .float_left{style: "margin-right: 15px"}
           = label_tag 'tr[x_city]', t('donate.city')
@@ -37,6 +37,6 @@
         %div{style: "position: relative; top: 15px; left: -6px; clear:left"}
           = check_box_tag 'tr[x_email_customer]', "yes", true, tabindex: 84
           = label_tag 'tr[x_email_customer]', t('donate.receipt')
-      %div.float_right{style: "padding-top: 1em; padding-bottom: 2em"}
+      %div{style: "padding-top: 1em; padding-bottom: 2em"}
         %button{class: "action_button_green", tabindex: 96, action: "submit"}
           = t('donate.preview')
