--- a/app/assets/stylesheets/_dynamic_menus.sass
+++ b/app/assets/stylesheets/_dynamic_menus.sass
@@ -229,7 +229,8 @@
 .dynamic_menu label
   font-weight: normal
 
-.dynamic_menu input[type="text"]
+.dynamic_menu input[type="text"],
+.dynamic_menu textarea
   +box-shadow(inset rgba(#000, 0.5) 0 1px 2px 0, inset rgba(#fff, 0.05) 0 -1px 0 0, rgba(#fff, 0.1) 0 1px 0 0)
   background: #494949 !important
   border: 1px solid #000
