--- a/app/views/bookmarks/_form.html.haml
+++ b/app/views/bookmarks/_form.html.haml
@@ -6,23 +6,23 @@
         - @bookmark.errors.each do |e|
           %li= e
   %p
-    = f.label :title, "Title:"
+    = f.label :title, t("bookmarks.title field")
     = f.text_field :title
   %p
-    = f.label :version, "Version:"
+    = f.label :version, t("bookmarks.version:")
     -# f.select :version, options_for_select(versions_dropdown, (@bookmark.version || nil)), {:prompt => '--Select--'}
     = Version.find(@bookmark.version).to_s
   %p
-    = f.label :reference, "Reference:"
+    = f.label :reference, t("bookmarks.reference")
     = @bookmark.reference_list.map{|r| link_to(r, bible_path(r))}.join(", ").html_safe
   %p
-    = f.label :labels, "Labels (comma-separated):"
+    = f.label :labels, t("bookmarks.labels comma separated")
     = f.text_field :labels
   %p
-    = f.label :highlight_color, "Color:"
+    = f.label :highlight_color, t("bookmarks.color")
     = f.text_field :highlight_color, class: 'float_left'
     %div{:class => "color_picker_list", style: "width:auto; margin-top:-10px; margin-left:10px; margin-bottom: 20px"}
       %a{:class => "color_picker", :href =>"#"}
       %a{:class => "color_picker_holder", :href =>"#"}
   %p{style: "clear: left"}
-    = f.submit(@bookmark.persisted? ? "Update" : "Save")
+    = f.submit(@bookmark.persisted? ? t("bookmarks.update") : t("bookmarks.save"))
