I18inize New Note widget header. Fixes #250

--- a/app/views/shared/_widget_parallel_notes.html.haml
+++ b/app/views/shared/_widget_parallel_notes.html.haml
@@ -1,6 +1,6 @@
 .widget.parallel_notes{style: ("display: none;" if hide_widget)}
   %header
-    %span.header_icon_note= t('New Note')
+    %span.header_icon_note= t('notes.new note')
     %a.pop_out_button
       %span
         = t('notes.pop out')
