fixed bug where current locale shows up twice in plans lang filter combo

--- a/app/views/plans/index.html.haml
+++ b/app/views/plans/index.html.haml
@@ -33,7 +33,7 @@
         %select.float_left{onChange: "this.form.submit()", style: "margin-right: 126px; margin-left:10px", name: "lang", }
           - (Plan.available_locales & I18n.available_locales).each do |loc|
             %option{value: loc.to_s, selected: loc.to_s == @plan_lang}= t("language name", locale: loc)
-          - unless (Plan.available_locales & I18n.available_locales).find{|l| l == @plan_lang}
+          - unless (Plan.available_locales & I18n.available_locales).find{|l| l == @plan_lang.to_sym}
             %option{value: @plan_lang.to_s, selected: true}= t("language name", locale: @plan_lang)
       %form{method: 'get'}
         - if params[:category]
