--- a/app/views/bookmarks/_form.html.haml
+++ b/app/views/bookmarks/_form.html.haml
@@ -9,7 +9,7 @@
     = f.label :title, t("bookmarks.title field")
     = f.text_field :title
   %p
-    = f.label :version, t("bookmarks.version:")
+    = f.label :version, t("bookmarks.version field")
     -# f.select :version, options_for_select(versions_dropdown, (@bookmark.version || nil)), {:prompt => '--Select--'}
     = Version.find(@bookmark.version).to_s
   %p
