--- a/app/views/bookmarks/_form.html.haml
+++ b/app/views/bookmarks/_form.html.haml
@@ -6,7 +6,7 @@
         - @bookmark.errors.each do |e|
           %li= e
   %p
-    = f.label :title, t("bookmarks.title field")
+    = f.label :title, t("bookmarks.title field field")
     = f.text_field :title
   %p
     = f.label :version, t("bookmarks.version field")
